A1-A4: API connection and data fetching - dialog collects REST API url from user - fetches codes, neighborhoods, incidents on connect - stores data in vue refs for later use - dashboard updates for task tracking

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,6 @@ dist/
 *.swo
 .DS_Store
 
-# Planning docs (for local reference only)
-docs/TASKS.md
-docs/SPRINT.md
-docs/EMAIL.md
-docs/ASSIGNMENT.md
-docs/API.md
+# Planning docs (keep dashboard.html, ignore markdown planning files)
+docs/*.md
 
